syntax = "proto3";

//option csharp_namespace = "UserService";

service UserGrpcService {
  rpc AddClaimToPerson(AddClaimRequest) returns (AddClaimResponse);
  rpc DeletePersonClaim(AddClaimRequest) returns (AddClaimResponse);
  rpc GetPersonClaims(GetClaimsRequest) returns (GetClaimResponse);
}

message AddClaimRequest {
  string email = 1;
  string claimType = 2;
  string claimValue = 3;
}

message AddClaimResponse {
  bool success = 1;
  string message = 2;
}

message GetClaimsRequest{
	string email = 1;
}

message GetClaimResponse {
  bool success = 1;
  string message = 2;
  repeated Claim claims = 3;
}

message Claim {
  string type = 1;
  string value = 2;
}